--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
     "description": "The bundle adds extra features to FOSElasticaBundle bundle",
     "keywords": ["elasticsearch", "elastica", "fos", "performance"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "github.com/web-good/lgc-enqueue-elastica-bundle.git"
+        }
+    ],
     "require": {
         "php": "^7.1|^8.0",
         "symfony/framework-bundle": "^4.0|^5.0",
